k3s-deploy/hyperion-stack-deploy/rabbitmq-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
spec:
  type: ClusterIP
  selector:
    app: rabbitmq
  ports:
    - port: 5672
      targetPort: 5672
      protocol: TCP
      name: amqp
    - port: 15672
      targetPort: 15672
      protocol: TCP
      name: management
    - port: 15692
      targetPort: 15692
      protocol: TCP
      name: prometheus
